add part of analysis results

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ Freamwork/TestData/timestamp.mat
 *.mat
 *.yml
 *.pdf
-*.png
 *.jpg
 *.sh
 SpectrumLabelling/doc/instructions.html
@@ -11,3 +10,67 @@ SpectrumLabelling/doc/instructions.html
 *.asv
 *.dat
 R_src/ozon_tram1_14102011_14012012.csv
+Miniest/level_image.png
+SpectrumLabelling/doc/images/chars.png
+SpectrumLabelling/doc/images/cover.png
+SpectrumLabelling/doc/images/peppers.png
+Src/R1R2.png
+Src/RandomField_Spatial/codegen/mex/kriging/html/hilite_warning.png
+mGstat/doc/figures/image2ti_test.png
+mGstat/doc/figures/kernel.png
+mGstat/doc/figures/kernel_ex1.png
+mGstat/doc/figures/kernel_ex2.png
+mGstat/doc/figures/kernel_multiple.png
+mGstat/doc/figures/kernelfig.png
+mGstat/doc/figures/krigex2.png
+mGstat/doc/figures/mgstat_fast_fd_2d.png
+mGstat/doc/figures/mgstat_fast_fd_2d2.png
+mGstat/doc/figures/mgstat_munk_fresnel_2d.png
+mGstat/doc/figures/orig/kernel_ex1.png
+mGstat/doc/figures/orig/kernel_ex2.png
+mGstat/doc/figures/orig/kernelfig.png
+mGstat/doc/figures/orig/visim_dssim_refsemivar.png
+mGstat/doc/figures/orig/visim_etype_ex1.png
+mGstat/doc/figures/orig/visim_etype_ex2.png
+mGstat/doc/figures/orig/visim_etype_ex3.png
+mGstat/doc/figures/orig/visim_etype_ex4.png
+mGstat/doc/figures/orig/visim_hist_ex1.png
+mGstat/doc/figures/orig/visim_hist_ex2.png
+mGstat/doc/figures/orig/visim_rpath_etype_compare.png
+mGstat/doc/figures/orig/visim_semi_ex1.png
+mGstat/doc/figures/orig/visim_semi_ex2.png
+mGstat/doc/figures/orig/visim_semi_real_ex1.png
+mGstat/doc/figures/orig/visim_sim_ex1.png
+mGstat/doc/figures/orig/visim_volfit_ex1.png
+mGstat/doc/figures/sgems_demo_filtersim_cont_cond.png
+mGstat/doc/figures/sgems_demo_filtersim_cont_etype.png
+mGstat/doc/figures/sgems_demo_filtersim_cont_uncond.png
+mGstat/doc/figures/sgems_example_ppm.png
+mGstat/doc/figures/sgems_example_sgsim_conditional_hard_data_from_file.png
+mGstat/doc/figures/sgems_example_ti_from_image.png
+mGstat/doc/figures/visim_dssim_refsemivar.png
+mGstat/doc/figures/visim_etype_ex1.png
+mGstat/doc/figures/visim_etype_ex2.png
+mGstat/doc/figures/visim_etype_ex3.png
+mGstat/doc/figures/visim_etype_ex4.png
+mGstat/doc/figures/visim_hist_ex1.png
+mGstat/doc/figures/visim_hist_ex2.png
+mGstat/doc/figures/visim_rpath_etype_compare.png
+mGstat/doc/figures/visim_semi_ex1.png
+mGstat/doc/figures/visim_semi_ex2.png
+mGstat/doc/figures/visim_semi_real_ex1.png
+mGstat/doc/figures/visim_sim_ex1.png
+mGstat/doc/figures/visim_volfit_ex1.png
+mGstat/examples/mgstat_examples/krigex2.png
+mGstat/examples/mgstat_examples/krigex3.png
+mGstat/examples/mgstat_examples/krigex4.png
+mGstat/examples/mgstat_examples/krigex5.png
+mGstat/examples/mgstat_examples/krigex6.png
+mGstat/examples/mgstat_examples/krigex7.png
+mGstat/examples/sgems_examples/sgems_demo_filtersim_cont_cond.png
+mGstat/examples/sgems_examples/sgems_demo_filtersim_cont_etype.png
+mGstat/examples/sgems_examples/sgems_demo_filtersim_cont_uncond.png
+mGstat/examples/sgems_examples/sgems_example_ppm.png
+mGstat/examples/sgems_examples/sgems_example_sgsim_conditional.png
+mGstat/examples/sgems_examples/sgems_example_sgsim_conditional_hard_data_from_file.png
+mGstat/examples/sgems_examples/sgems_example_ti_from_image.png
