scripts for plotting, correct script generating simluate data set

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ mGstat/examples/sgems_examples/sgems_example_ppm.png
 mGstat/examples/sgems_examples/sgems_example_sgsim_conditional.png
 mGstat/examples/sgems_examples/sgems_example_sgsim_conditional_hard_data_from_file.png
 mGstat/examples/sgems_examples/sgems_example_ti_from_image.png
+Src/5_Results/Figs/fig_fm.fig
+Src/5_Results/Figs/fm.png
+Src/5_Results/Figs/gsm.png
+Src/5_Results/Figs/tv.png
