figure-plot for thesis

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ Src/5_Results/Figs/fig_fm.fig
 Src/5_Results/Figs/fm.png
 Src/5_Results/Figs/gsm.png
 Src/5_Results/Figs/tv.png
+Src/5_Results/Figs/sim.png
+Src/5_Results/Figs/Adoptive thresholding.png
+Src/5_Results/Figs/fig_ed.fig
+Src/5_Results/Figs/ed.png
