plot-scripts went on

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Src/5_Results/Figs/sim.png
 Src/5_Results/Figs/Adoptive thresholding.png
 Src/5_Results/Figs/fig_ed.fig
 Src/5_Results/Figs/ed.png
+*.png
